HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestMissingPostcondition/Expected.uv
//! Expected diagnostic metadata for the TestMissingPostcondition rejected-source specimen.

expectedDiagnostic("E-TST-0106", "diagnostics.TestAttributes")
expectedDiagnostic("E-TST-0106", "req.TestProcedureShape")
